put taem in shared .yaml file
Signed-off-by: Evangelos Lamprou <vagos@lamprou.xyz>

--- a/index.html
+++ b/index.html
@@ -554,113 +554,75 @@
 </h2>
 
 
-<div id="gallery-2-1770775134354478000">
+<div id="gallery-2-1770775790077811000">
   
-<!-- <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
-    <strong><a href="https://www.anarsipur.com/" title="Anirudh Narsipur">Anirudh Narsipur</a></strong> <br> M.Sc. Student
+<div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" />
+  <strong><a href="https://achowd32.github.io/" title="Atharv Chowdhary">Atharv Chowdhary</a></strong>
+  <br> B.Sc. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/di.jpg" alt="Di Jin" />
+  <strong><a href="https://sleepymug.me" title="Di Jin">Di Jin</a></strong>
+  <br> Postdoc
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/eric.jpg" alt="Eric Zhao" />
+  <strong><a href="https://mustardfox.org/" title="Eric Zhao">Eric Zhao</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/ethan.jpg" alt="Ethan Lavi" />
+  <strong><a href="https://ethanlavi.github.io/" title="Ethan Lavi">Ethan Lavi</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" />
+  <strong><a href="https://vagos.lamprou.xyz/" title="Evangelos Lamprou">Evangelos Lamprou</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/george.jpg" alt="George Kapetanakis" />
+  <strong><a href="#" title="George Kapetanakis">George Kapetanakis</a></strong>
+  <br> Visiting Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis" />
+  <strong><a href="https://www.ntousakis.com/" title="Grigoris Ntousakis">Grigoris Ntousakis</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek" />
+  <strong><a href="https://llazarek.github.io" title="Lukas Lazarek">Lukas Lazarek</a></strong>
+  <br> Postdoc
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/maria.jpg" alt="Maria Lazou" />
+  <strong><a href="https://mlazoy.github.io/" title="Maria Lazou">Maria Lazou</a></strong>
+  <br> Visiting Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/megan.jpg" alt="Megan Zheng" />
+  <strong><a href="https://yuuu23.github.io/" title="Megan Zheng">Megan Zheng</a></strong>
+  <br> B.Sc. student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/nikosv.jpg" alt="Nikos Vasilakis" />
+  <strong><a href="https://nikos.vasilak.is/" title="Nikos Vasilakis">Nikos Vasilakis</a></strong>
+  <br> Faculty
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen" />
+  <strong><a href="https://www.oguzhancolkesen.com" title="Oğuzhan Çölkesen">Oğuzhan Çölkesen</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/yizheng.jpg" alt="Yizheng Xie" />
+  <strong><a href="https://yizhengx.github.io/" title="Yizheng Xie">Yizheng Xie</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" />
+  <strong><a href="https://lwwlwwl.github.io/" title="Yuchen Lu">Yuchen Lu</a></strong>
+  <br> Ph.D. Student
+</div><div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/zekai.jpg" alt="Zekai Li" />
+  <strong><a href="#" title="Zekai Li">Zekai Li</a></strong>
+  <br> M.Sc. Student
 </div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/christina.jpg" alt="Christina Stepin" />
-    <strong><a href="https://www.linkedin.com/in/christinastepin/" title="Christina Stepin">Christina Stepin</a></strong> <br> B.Sc. student
-</div> -->
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" /> 
-  <strong><a href="#" title="Atharv Chowdhary">Atharv Chowdhary</a></strong> <br> B.Sc. Student
-</div>
-
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/di.jpg" alt="Di Jin" />
-    <strong><a href="https://sleepymug.me" title="Di Jin">Di Jin</a></strong> <br> Postdoc
-</div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/eric.jpg" alt="Eric Zhao" />
-    <strong><a href="https://mustardfox.org/" title="Eric Zhao">Eric Zhao</a></strong> <br> Ph.D. Student 
-</div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/ethan.jpg" alt="Ethan Lavi" />
-    <strong><a href="https://ethanlavi.github.io/" title="Ethan Lavi">Ethan Lavi</a></strong> <br> Ph.D. Student 
-</div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" />
-    <strong><a href="https://vagos.github.io/" title="Vagos Lamprou">Evangelos Lamprou</a></strong> <br> Ph.D. Student 
-</div>
-
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/george.jpg" alt="George Kapetanakis" /> 
-  <strong><a href="#" title="George Kapetanakis">George Kapetanakis</a></strong> <br> Visiting Student
-</div>
-
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis" />
-    <strong><a href="https://www.ntousakis.com/" title="Grigoris Ntousakis">Grigoris Ntousakis</a></strong> <br> Ph.D. Student 
-</div>
-<!-- <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" />
-    <strong><a href="https://igemou.github.io/" title="Ioanna Gemou">Ioanna Gemou</a></strong> <br> Visiting Student 
-</div> 
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/julian.jpg" alt="Julian Dai" />
-    <strong><a href="https://jdai1.github.io/" title="Julian Dai">Julian Dai</a></strong> <br> B.Sc. student
-</div> -->
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek" />
-    <strong><a href="https://llazarek.github.io" title="Lukas Lazarek">Lukas Lazarek</a></strong> <br> Postdoc
-</div>
-
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/maria.jpg" alt="Maria Lazou" /> 
-  <strong><a href="#" title="Maria Lazou">Maria Lazou</a></strong> <br> Visiting Student
-</div>
-
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/megan.jpg" alt="Megan Zheng" />
-    <strong><a href="https://yuuu23.github.io/" title="Megan Zheng">Megan Zheng</a></strong> <br> B.Sc. student
-</div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/nikosv.jpg" alt="Nikos Vasilakis" />
-    <strong><a href="https://nikos.vasilak.is/" title="Nikos Vasilakis">Nikos Vasilakis</a></strong> 
-    <br>Faculty
-</div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen" />
-    <strong><a href="https://www.oguzhancolkesen.com" title="Oğuzhan Çölkesen">Oğuzhan Çölkesen</a></strong> <br> Ph.D. Student 
-</div>
-<!-- <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/ramiz.jpg" alt="Ramiz Dundar" />
-    <strong><a href="https://www.linkedin.com/in/ramizdundar/" title="Ramiz Dundar">Ramiz Dundar</a></strong> <br> M.Sc. Student 
-</div>
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/seongheon.jpg" alt="Seong-Heon Jung" />
-    <strong><a href="https://forthoney.github.io/" title="Seong-Heon Jung">Seong-Heon Jung</a></strong> <br> B.Sc. student
-</div> -->
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" />
-    <strong><a href="https://lwwlwwl.github.io/" title="Yuchen Lu">Yuchen Lu</a></strong> <br> Ph.D. Student 
-</div>
-<!-- <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/yutong.jpg" alt="Yutong Li" />
-    <strong><a href="https://www.linkedin.com/in/yutong-li-9315b7173/" title="Yutong Li">Yutong Li</a></strong> <br> M.Sc. Student
-</div> -->
-<div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/yizheng.jpg" alt="Yizheng Xie" />
-    <strong><a href="https://yizhengx.github.io/" title="Yizheng Xie">Yizheng Xie</a></strong> <br> Ph.D. Student 
-</div>
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/zekai.jpg" alt="Zekai Li" /> 
-  <strong><a href="#" title="Zekai Li">Zekai Li</a></strong> <br> M.Sc. Student
-</div>
-<!-- <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/zhicheng.jpg" alt="Zhicheng Huang" /> 
-    <strong><a href="https://huangworld.github.io/" title="Zhicheng Huang">Zhicheng Huang</a></strong> <br> M.Sc. Student
-</div> -->
-
 
 </div>
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-2-1770775134354478000').packery({
+    $('#gallery-2-1770775790077811000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
