fix team layout
Signed-off-by: Evangelos Lamprou <vagos@lamprou.xyz>

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
   
   
   
-  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.8525fa9ff293df63b92c96932b0a310ded91e635d0f22c7844d2738139776aa6d65f0a7c38a285df27219ae8afcd7524cd0ca98927629da0aee09910e3c2469b.css"
-    integrity="sha512-hSX6n/KT32O5LJaTKwoxDe2R5jXQ8ix4RNJzgTl3aqbWXwp8OKKF3ychmuivzXUkzQypiSdinaCu4JkQ48JGmw==" />
+  
+  
+  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.eb37faef6823d8b9361bedc4fb33ab3006f0b51eda0850cb0d3e4d71c8b960ee092b0ce0dba70710a012a5c80de2cd9f91c9d7b8842b987a474d02bbb1788b61.css"
+    integrity="sha512-6zf672gj2Lk2G&#43;3E&#43;zOrMAbwtR7aCFDLDT5Ncci5YO4JKwzg26cHEKASpcgN4s2fkcnXuIQrmHpHTQK7sXiLYQ==" />
   
   
   <script type="text/javascript" src="/js/appearance.min.516a16745bea5a9bd011138d254cc0fd3973cd55ce6e15f3dec763e7c7c2c7448f8fe7b54cca811cb821b0c7e12cd161caace1dd794ac3d34d40937cbcc9ee12.js"
@@ -107,9 +109,6 @@
 
 
 
-
-
-<script defer src="/lib/packery/packery.pkgd.min.js" integrity=""></script>
 
 
 
@@ -552,83 +551,64 @@
             style="text-decoration-line: none !important;" href="#team" aria-label="Anchor">#</a></span>        
     
 </h2>
+<div class="team-home-grid"><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary">
+    <strong><a href="https://achowd32.github.io/" title="Atharv Chowdhary">Atharv Chowdhary</a></strong>
+    <span class="team-home-role">B.Sc. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/eric.jpg" alt="Eric Zhao">
+    <strong><a href="https://mustardfox.org/" title="Eric Zhao">Eric Zhao</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/ethan.jpg" alt="Ethan Lavi">
+    <strong><a href="https://ethanlavi.github.io/" title="Ethan Lavi">Ethan Lavi</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou">
+    <strong><a href="https://vagos.lamprou.xyz/" title="Evangelos Lamprou">Evangelos Lamprou</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/george.jpg" alt="George Kapetanakis">
+    <strong>George Kapetanakis</strong>
+    <span class="team-home-role">Visiting Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis">
+    <strong><a href="https://www.ntousakis.com/" title="Grigoris Ntousakis">Grigoris Ntousakis</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek">
+    <strong><a href="https://llazarek.github.io" title="Lukas Lazarek">Lukas Lazarek</a></strong>
+    <span class="team-home-role">Postdoc</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/maria.jpg" alt="Maria Lazou">
+    <strong><a href="https://mlazoy.github.io/" title="Maria Lazou">Maria Lazou</a></strong>
+    <span class="team-home-role">Visiting Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/megan.jpg" alt="Megan Zheng">
+    <strong><a href="https://yuuu23.github.io/" title="Megan Zheng">Megan Zheng</a></strong>
+    <span class="team-home-role">B.Sc. student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/nikosv.jpg" alt="Nikos Vasilakis">
+    <strong><a href="https://nikos.vasilak.is/" title="Nikos Vasilakis">Nikos Vasilakis</a></strong>
+    <span class="team-home-role">Faculty</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen">
+    <strong><a href="https://www.oguzhancolkesen.com" title="Oğuzhan Çölkesen">Oğuzhan Çölkesen</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/yizheng.jpg" alt="Yizheng Xie">
+    <strong><a href="https://yizhengx.github.io/" title="Yizheng Xie">Yizheng Xie</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu">
+    <strong><a href="https://lwwlwwl.github.io/" title="Yuchen Lu">Yuchen Lu</a></strong>
+    <span class="team-home-role">Ph.D. Student</span>
+  </article><article class="team-home-card">
+    <img class="team-photo" src="../profile_pictures/zekai.jpg" alt="Zekai Li">
+    <strong>Zekai Li</strong>
+    <span class="team-home-role">M.Sc. Student</span>
+  </article></div>
 
-
-<div id="gallery-2-1770775790077811000">
-  
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" />
-  <strong><a href="https://achowd32.github.io/" title="Atharv Chowdhary">Atharv Chowdhary</a></strong>
-  <br> B.Sc. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/di.jpg" alt="Di Jin" />
-  <strong><a href="https://sleepymug.me" title="Di Jin">Di Jin</a></strong>
-  <br> Postdoc
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/eric.jpg" alt="Eric Zhao" />
-  <strong><a href="https://mustardfox.org/" title="Eric Zhao">Eric Zhao</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/ethan.jpg" alt="Ethan Lavi" />
-  <strong><a href="https://ethanlavi.github.io/" title="Ethan Lavi">Ethan Lavi</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" />
-  <strong><a href="https://vagos.lamprou.xyz/" title="Evangelos Lamprou">Evangelos Lamprou</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/george.jpg" alt="George Kapetanakis" />
-  <strong><a href="#" title="George Kapetanakis">George Kapetanakis</a></strong>
-  <br> Visiting Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis" />
-  <strong><a href="https://www.ntousakis.com/" title="Grigoris Ntousakis">Grigoris Ntousakis</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek" />
-  <strong><a href="https://llazarek.github.io" title="Lukas Lazarek">Lukas Lazarek</a></strong>
-  <br> Postdoc
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/maria.jpg" alt="Maria Lazou" />
-  <strong><a href="https://mlazoy.github.io/" title="Maria Lazou">Maria Lazou</a></strong>
-  <br> Visiting Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/megan.jpg" alt="Megan Zheng" />
-  <strong><a href="https://yuuu23.github.io/" title="Megan Zheng">Megan Zheng</a></strong>
-  <br> B.Sc. student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/nikosv.jpg" alt="Nikos Vasilakis" />
-  <strong><a href="https://nikos.vasilak.is/" title="Nikos Vasilakis">Nikos Vasilakis</a></strong>
-  <br> Faculty
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen" />
-  <strong><a href="https://www.oguzhancolkesen.com" title="Oğuzhan Çölkesen">Oğuzhan Çölkesen</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/yizheng.jpg" alt="Yizheng Xie" />
-  <strong><a href="https://yizhengx.github.io/" title="Yizheng Xie">Yizheng Xie</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" />
-  <strong><a href="https://lwwlwwl.github.io/" title="Yuchen Lu">Yuchen Lu</a></strong>
-  <br> Ph.D. Student
-</div><div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/zekai.jpg" alt="Zekai Li" />
-  <strong><a href="#" title="Zekai Li">Zekai Li</a></strong>
-  <br> M.Sc. Student
-</div>
-
-</div>
-
-<script>
-  $(window).on("load", function () {
-    $('#gallery-2-1770775790077811000').packery({
-      percentPosition: true,
-      gutter: 5,
-      resize: true
-    });
-  })
-</script>
 <hr>
 <div id="research" class="anchor"></div>
 <h2 class="relative group">Research 
